bin/testsuite/tests/compiler/src/errors/compiler4368.swg
#global testerror "Err0308"
func(N = 6) add()
{
}

#test
{
    add()
}